2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/ip.c (handle_dgram): Fix undeclared variable.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/autofs.c (read_fs_list): Revert accidental wrong
	commit.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>
2012-05-01  Bean  <bean123ch@gmail.com>

	* grub-core/net/ip.c (handle_dgram): Fix DHCP mac comparison.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/file.c (grub_file_read): Read nothing if len = 0.
	Special behaviour for len = 0 to read whole file isn't used anywhere and
	can cause buffer ovewrflows in several places.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/autofs.c (read_fs_list): Fix memory leak.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle RAIDZ on non-512B sectors.

	* grub-core/fs/zfs/zfs.c (grub_zfs_device_desc): New member
	max_children_ashift.
	(fill_vdev_info_real): Fill max_children_ashift.
	(read_device): Use max_children_ashift.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fshelp.c (grub_fshelp_find_file): Fix memory leak.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (read_device_map): Reject non-standard
	disk names.
	* docs/grub.texi: Update device.map parts.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't scan into non-diskfilter devices having diskfilter names.

	* grub-core/disk/diskfilter.c (is_valid_diskfilter_name): New function.
	(scan_disk): New argument accept_diskfilter. Fix recursion depth
	handling.
	(scan_disk_hook): New function.

2012-04-29  Bean  <bean123ch@gmail.com>

	* grub-core/net/drivers/efi/efinet.c (get_card_packet): Fix buffer
	allocation.

2012-04-29  Mads Kiilerich  <mads@kiilerich.com> (tiny)

	* configure.ac: Detect starfield theme font path
	/usr/share/fonts/dejavu/DejaVuSans.ttf for Fedora.

2012-04-26  Vladimir Serbinenko  <phcoder@gmail.com>
